--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
                     
                     <div class="mt-12 grid grid-cols-1 md:grid-cols-2 gap-8 items-center">
                         <div class="text-center">
-                            <img src="https://placehold.co/600x400/3a5f8a/FFFFFF?text=B%C3%A5ttur" alt="Mattias och Madeléne i en båt" class="rounded-lg shadow-xl w-full object-cover" onerror="this.onerror=null;this.src='https://placehold.co/600x400/E4D5C7/312F2D?text=Bild+saknas';">
+                            <img src="src="bilder/havet.jpg" alt="Mattias och Madeléne i en båt" class="rounded-lg shadow-xl w-full object-cover" onerror="this.onerror=null;this.src='https://placehold.co/600x400/E4D5C7/312F2D?text=Bild+saknas';">
                             <p class="mt-4 text-md italic">Mot en ljus horisont, tillsammans.</p>
                         </div>
                         <div class="text-center">
