fixat .png på bilder

--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
         </header>
 
         <main>
-            <section id="hero" class="relative py-20 sm:py-32 bg-cover bg-center" style="background-image: url('https://placehold.co/1200x800/6d635b/ffffff?text=Kyss+vid+forsen');">
+            <section id="hero" class="relative py-20 sm:py-32 bg-cover bg-center" style="background-image: url('https://mattegrubb.github.io/alven-sidan/bilder/storforsen.png');">
                 <div class="absolute inset-0 bg-black/30"></div>
                 <div class="relative max-w-4xl mx-auto px-4 sm:px-6 lg:px-8 text-center fade-in">
                     <h1 class="text-4xl sm:text-5xl md:text-6xl font-bold text-white">Där Älven Går</h1>
@@ -195,11 +195,11 @@
                     
                     <div class="mt-12 grid grid-cols-1 md:grid-cols-2 gap-8 items-center">
                         <div class="text-center">
-                            <img src="https://mattegrubb.github.io/alven-sidan/bilder/havet" alt="Mattias och Madeléne i en båt" class="rounded-lg shadow-xl w-full object-cover" onerror="this.onerror=null;this.src='https://placehold.co/600x400/E4D5C7/312F2D?text=Bild+saknas';">
+                            <img src="https://mattegrubb.github.io/alven-sidan/bilder/havet.png" alt="Mattias och Madeléne i en båt" class="rounded-lg shadow-xl w-full object-cover" onerror="this.onerror=null;this.src='https://placehold.co/600x400/E4D5C7/312F2D?text=Bild+saknas';">
                             <p class="mt-4 text-md italic">Mot en ljus horisont, tillsammans.</p>
                         </div>
                         <div class="text-center">
-                            <img src="https://mattegrubb.github.io/alven-sidan/bilder/eliasleden" alt="En person vid en vandringsled" class="rounded-lg shadow-xl w-full object-cover" onerror="this.onerror=null;this.src='https://placehold.co/600x400/E4D5C7/312F2D?text=Bild+saknas';">
+                            <img src="https://mattegrubb.github.io/alven-sidan/bilder/eliasleden.png" alt="En person vid en vandringsled" class="rounded-lg shadow-xl w-full object-cover" onerror="this.onerror=null;this.src='https://placehold.co/600x400/E4D5C7/312F2D?text=Bild+saknas';">
                             <p class="mt-4 text-md italic">Varje stig, både egen och gemensam, har lett oss hit.</p>
                         </div>
                     </div>
